--- a/client/src/components/organisms/ssh/SSHFileExplorer/SSHFileExplorer.css
+++ b/client/src/components/organisms/ssh/SSHFileExplorer/SSHFileExplorer.css
@@ -1,3 +1,29 @@
+/* SSH File Explorer Window Container */
+.ssh-file-explorer-container {
+    position: fixed !important;
+    z-index: 2147483646;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    width: 1000px;
+    overflow: hidden;
+    border-radius: .5rem;
+}
+
+.ssh-file-explorer-container:has(.maximized) {
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
+    transform: none !important;
+    border-radius: 0;
+}
+
+.ssh-file-explorer-window-header {
+    padding: 1rem 1rem 0 1rem;
+}
+
 .trajectory-fs-image-preview {
     position: fixed !important;
     z-index: 99999999999;
